src/ui/Profile/MyCertificates/MyCertificates.scss
.my-certificates {
  @media only screen and (min-width: 769px) {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    width: 100%;
    height: 100%;

    &__header {
      width: 100%;
      height: 120px;
      display: flex;
      flex-direction: column;
      align-items: flex-start;
      padding: 26px 46px;
      background-color: #fff;
      margin-bottom: 36px;

      &__title {
        font-size: 27px;
        font-weight: bold;
        text-transform: capitalize;
        color: #000;
      }

      &__description {
        font-size: 16px;
        color: #141b23;
      }
    }

    &__content {
      width: 100%;
      display: flex;
      flex-direction: column;
      align-items: flex-start;
      justify-content: center;
      background-color: #fff;
      border-top: #ef7f00 6px solid;

      .search-bar__and__filters {
        display: flex;
        flex-direction: row;
        align-items: flex-end;
        padding: 25px 30px 40px 30px;
        width: 100%;
        justify-content: space-between;

        .search {
          width: 398px;
          height: 45px;
          display: flex;
          flex-direction: row;
          align-items: center;
          justify-content: center;
          margin-right: 44px;

          &__form {
            width: auto;
            display: flex;

            input {
              padding-left: 55px !important;
              width: 398px;
              height: 45px;
              border: 1px solid #dce6f4;
              border-radius: 5px;
              padding: 0.5rem 1rem;
              color: #002a5b;
            }

            input.search-query {
              background: #ffffff 0% 0% no-repeat padding-box;
              font-size: 18px;
              font-weight: bold;
              color: #002a5b;
            }

            input::placeholder {
              color: #002a5b;
            }

            i {
              font-size: 26px;
              color: #002a5b;
              align-self: baseline;
              position: absolute;
              margin-top: 10px;
              margin-left: 15px;
              text-align: center;
              z-index: 99;
              cursor: pointer;
            }
          }
        }

        .filters {
          display: flex;
          flex-direction: row;
          align-items: flex-end;

          .filter__title {
            color: #000;
            font-size: 18px;
            margin-right: 20px;
          }

          .item-category {
            position: relative;
            height: 23px;
            display: flex;
            align-items: center;
            margin-right: 32px;
            cursor: pointer;

            .title {
              font-size: 18px;
              font-weight: bold;
              letter-spacing: 0.32px;
              color: #141b23;
            }

            i {
              font-size: 26px;
              color: #141b23;
              align-self: baseline;
            }

            &__categories {
              &__dropdown-menu {
                margin-left: 10px;
                position: relative;
                display: inline-block;

                &__menu.active {
                  display: flex;
                }

                &__menu {
                  width: 640px;
                  display: none;
                  position: absolute;
                  z-index: 9999;
                  background: #002a5b 0% 0% no-repeat padding-box;
                  box-shadow: 0px 3px 6px #00000029;
                  padding-top: 30px;
                  margin-top: 40px;
                  flex-direction: row;
                  top: 0;
                  right: 0;
                  color: #fff;
                  cursor: auto;

                  &__items__left {
                    width: 277px;
                    display: flex;
                    flex-direction: column;
                    background: #002a5b;

                    &__item {
                      width: 100%;
                      height: 60px;
                      padding: 10px 30px 30px 50px;
                      font-size: 16px;
                      font-weight: bold;
                      text-align: left;
                      text-decoration: none;
                      display: block;
                      cursor: pointer;

                      &:hover {
                        background: #ef7f00 0% 0% no-repeat padding-box;
                      }

                      &.active {
                        background: #ef7f00 0% 0% no-repeat padding-box;
                      }
                    }
                  }

                  &__items__right {
                    display: flex;
                    flex-direction: column;
                    background: #002a5b;

                    &__item {
                      width: 100%;
                      height: 60px;
                      padding: 10px 30px 30px 15px;
                      font-size: 16px;
                      font-weight: bold;
                      text-align: left;
                      text-decoration: none;
                      display: block;
                      cursor: pointer;

                      &:hover {
                        background: #ef7f00 0% 0% no-repeat padding-box;
                      }

                      &.active {
                        background: #ef7f00 0% 0% no-repeat padding-box;
                      }
                    }
                  }
                }
              }
            }
          }

          .item-type {
            position: relative;
            height: 23px;
            display: flex;
            align-items: center;
            margin-right: 32px;
            cursor: pointer;

            .title {
              font-size: 18px;
              font-weight: bold;
              letter-spacing: 0.32px;
              color: #141b23;
            }

            i {
              font-size: 26px;
              color: #141b23;
              align-self: baseline;
            }

            &__courses-types {
              &__dropdown-menu {
                margin-left: 10px;
                position: relative;
                display: inline-block;

                &__menu.active {
                  display: flex;
                }

                &__menu {
                  width: 200px;
                  display: none;
                  position: absolute;
                  z-index: 9999;
                  background: #002a5b 0% 0% no-repeat padding-box;
                  box-shadow: 0px 3px 6px #00000029;
                  margin-top: 30px;
                  flex-direction: row;
                  top: 0;
                  right: 0;
                  color: #fff;
                  cursor: auto;

                  &__items__left {
                    width: 277px;
                    display: flex;
                    flex-direction: column;
                    background: #002a5b;

                    &__item {
                      width: 100%;
                      height: 60px;
                      padding: 20px 30px 0px 30px;
                      font-size: 16px;
                      font-weight: bold;
                      text-align: left;
                      text-decoration: none;
                      display: block;
                      cursor: pointer;

                      &:hover {
                        background: #ef7f00 0% 0% no-repeat padding-box;
                      }

                      &.active {
                        background: #ef7f00 0% 0% no-repeat padding-box;
                      }
                    }
                  }
                }
              }
            }
          }

          .item-location {
            position: relative;
            height: 23px;
            display: flex;
            align-items: center;
            cursor: pointer;

            .title {
              font-size: 18px;
              font-weight: bold;
              letter-spacing: 0.32px;
              color: #141b23;
            }

            i {
              font-size: 26px;
              color: #141b23;
              align-self: baseline;
            }

            &__locations {
              &__dropdown-menu {
                margin-left: 10px;
                position: relative;
                display: inline-block;

                &__menu.active {
                  display: flex;
                }

                &__menu {
                  width: 200px;
                  display: none;
                  position: absolute;
                  z-index: 9999;
                  background: #002a5b 0% 0% no-repeat padding-box;
                  box-shadow: 0px 3px 6px #00000029;
                  margin-top: 30px;
                  flex-direction: row;
                  top: 0;
                  right: 0;
                  color: #fff;
                  cursor: auto;

                  &__items__left {
                    width: 277px;
                    display: flex;
                    flex-direction: column;
                    background: #002a5b;

                    &__item {
                      width: 100%;
                      height: 60px;
                      padding: 20px 30px 0px 30px;
                      font-size: 16px;
                      font-weight: bold;
                      text-align: left;
                      text-decoration: none;
                      display: block;
                      cursor: pointer;

                      &:hover {
                        background: #ef7f00 0% 0% no-repeat padding-box;
                      }

                      &.active {
                        background: #ef7f00 0% 0% no-repeat padding-box;
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }

      &__divider {
        width: 100%;
        height: 1px;
        background: #b9bbbe;
        margin-bottom: 40px;
      }

      &__certificates {
        width: 100%;
        padding: 0 30px 30px 30px;

        .cards {
          display: flex;
          flex-wrap: wrap;
          align-items: center;
          justify-content: flex-start;
        }
      }
    }
  }
}

